--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,13 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 *{
-  font-family: "Helvetica";
+  font-family: "Lexend", "Helvetica";
 }
 body{
   background-color: rgb(245, 245, 245);
