--- a/src/app.css
+++ b/src/app.css
@@ -1,78 +1,86 @@
 /* @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"); */
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
   font-family: "Lexend", "Helvetica";
 }
-body{
+body {
   background-color: rgb(245, 245, 245);
 }
-a{
-  @apply text-nu-darkYellow underline
+a {
+  @apply text-nu-darkYellow underline;
 }
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-bottom: 0.5rem;
-    position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  position: relative;
+}
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+}
+@media (min-width: 768px) {
+  .row label {
+    width: 30%;
+    flex: 0 0 auto;
   }
-  .row > * {
-    flex-shrink: 0;
-    width: 100%;
-    max-width: 100%;
+  .row input,
+  .row select,
+  .row textarea {
+    width: 70%;
+    flex: 0 0 auto;
   }
-  @media (min-width: 768px) {
-    .row label {
-      width: 30%;
-      flex: 0 0 auto;
-    }
-    .row input,
-    .row select, 
-    .row textarea {
-      width: 70%;
-      flex: 0 0 auto;
-    }
-  }
-  input, select, textarea {
-    @apply border border-black/20 rounded-lg p-1 px-3;
-  }
-  .row label{
-    margin: auto;
-  }
+}
+input,
+select,
+textarea {
+  @apply border border-black/20 rounded-lg p-1 px-3;
+}
+.row label {
+  margin: auto;
+}
 
-  /* Entry Page */
-  .entry {
-    background-size: cover;
-  }
-  .field {
-    transition: all 400ms ease;
-    overflow-y: auto;
-  }
-  label {
-    margin: auto;
-  }
-  .entry input,
-  .entry select {
-    @apply border-2 p-0.5;
-  }
-  .entry .register label {
-    @apply md:w-[35%];
-  }
-  .entry .register input,
-  .entry .register select {
-    @apply md:w-[65%];
-  }
+/* Entry Page */
+.entry {
+  background-size: cover;
+}
+.field {
+  transition: all 400ms ease;
+  overflow-y: auto;
+}
+label {
+  margin: auto;
+}
+.entry input,
+.entry select {
+  @apply border-2 p-0.5;
+}
+.entry .register label {
+  @apply md:w-[35%];
+}
+.entry .register input,
+.entry .register select {
+  @apply md:w-[65%];
+}
 
-  /* Scanner */
-  #reader button{
-    @apply btn btn-sm my-2
-  }
-  #reader__scan_region{
-    @apply flex justify-center
-  }
+/* Scanner */
+#reader button {
+  @apply btn btn-sm my-2;
+}
+#reader__scan_region {
+  @apply flex justify-center;
+}
+
+/* AI */
+.ai ul {
+  @apply !list-disc list-inside;
+  transition: all 0.2s ease-in-out;
+}
